feat: example codes with webpack & babel

--- a/.gitignore
+++ b/.gitignore
@@ -98,7 +98,8 @@ typings/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -119,4 +120,5 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-
+# build result
+dist
