--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.3",
     "core-js": "^3.6.5",
+    "css-loader": "^3.6.0",
     "regenerator-runtime": "^0.13.5",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-extension-reloader": "^1.1.4",
