--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "bestzip": "^2.1.5",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.3",
     "core-js": "^3.6.5",
     "css-loader": "^3.6.0",
+    "mkdirp": "^1.0.4",
+    "npm-run-all": "^4.1.5",
     "regenerator-runtime": "^0.13.5",
+    "rimraf": "^3.0.2",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
