--- a/package.json
+++ b/package.json
@@ -12,25 +12,26 @@
     "release": "node release $1"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
     "babel-loader": "^8.1.0",
     "bestzip": "^2.1.7",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.0.3",
+    "copy-webpack-plugin": "^6.1.0",
     "core-js": "^3.6.5",
     "css-loader": "^3.6.0",
+    "jest": "^26.4.2",
     "mkdirp": "^1.0.4",
     "npm-run-all": "^4.1.5",
-    "regenerator-runtime": "^0.13.5",
+    "regenerator-runtime": "^0.13.7",
     "rimraf": "^3.0.2",
     "sass": "^1.26.10",
-    "sass-loader": "^9.0.2",
+    "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
-    "webpack": "^4.43.0",
+    "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-extension-reloader": "^1.1.4",
-    "webpack-merge": "^5.0.9"
+    "webpack-merge": "^5.1.4"
   },
   "dependencies": {
     "axios": "^0.19.2",
